sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:2: error: Missing closing brace `}' assumed here
var gap : Int = getValueCount()
^AlgCombSort:2: error: expected class or object definition
var gap : Int = getValueCount()
^AlgCombSort:3: error: expected class or object definition
var i : Int = 0
^AlgCombSort:4: error: expected class or object definition
var isOver : Boolean = true
^AlgCombSort:5: error: expected class or object definition
def combSort() {
^