sort.basic.comb.AlgCombSort.scala.code
var gap : Int = getValueCount()
var i : Int = 0
var isOver : Boolean = true
def combSort() {
  while (isOver == true || gap > 1){
    isOver=false
 	 if (gap >1){
 	   gap = (gap.toDouble / 1.3 ).toInt
 	   i =0
	  }
 	 while (i + gap < getValueCount()){
   	 if (isSmaller(i,i+gap)==false){
  	    swap(i, i + gap)
  	    i = i + 1
       isOver = true
    }
  }
}